// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile n huge 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 35;
  line-height: 35px;
  margin-top: 5px;
}

.IS4 {
  padding-left: 10px;
  flex: 1;
}

.IS5 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS4"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <div
        aria-level="3"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
        role="heading"
      >
        This is tile headline
      </div>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </div>
  </div>
</Link>
`;

exports[`tile n medium 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 18;
  line-height: 18px;
}

.IS4 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #CCC;
  padding-bottom: 0;
  padding-top: 5px;
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <div
        aria-level="3"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
        role="heading"
      >
        This is tile headline
      </div>
      <div
        aria-level="4"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        role="heading"
      >
        Three Conservative MPs resign
      </div>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </div>
  </div>
</Link>
`;

exports[`tile n small 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 18;
  line-height: 18px;
}

.IS4 {
  font-family: TimesModern-Regular;
  font-size: 14;
  line-height: 24;
  color: #696969;
  padding-bottom: 10px;
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <div
        aria-level="3"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
        role="heading"
      >
        This is tile headline
      </div>
      <div
        aria-level="4"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        role="heading"
      >
        Three Conservative MPs resign
      </div>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </div>
  </div>
</Link>
`;

exports[`tile n wide 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 28;
  line-height: 28px;
}

.IS4 {
  font-family: TimesDigitalW04-Regular;
  font-size: 14;
  line-height: 20;
  color: #CCC;
  padding-bottom: 0;
  padding-top: 5px;
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <div
        aria-level="3"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
        role="heading"
      >
        This is tile headline
      </div>
      <div
        aria-level="4"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        role="heading"
      >
        Three Conservative MPs resign
      </div>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </div>
  </div>
</Link>
`;

exports[`tile n with default star 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 18;
  line-height: 18px;
}

.IS4 {
  font-family: TimesModern-Regular;
  font-size: 14;
  line-height: 24;
  color: #696969;
  padding-bottom: 10px;
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <div
        aria-level="3"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
        role="heading"
      >
        This is tile headline
      </div>
      <div
        aria-level="4"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        role="heading"
      >
        Three Conservative MPs resign
      </div>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </div>
  </div>
</Link>
`;

exports[`tile n without breakpoint should be like small 1`] = `
<style>
.IS1 {
  flex: 1;
}

.IS2 {
  margin-bottom: 0px;
}

.IS3 {
  color: #FFFFFF;
  font-family: TimesModern-Bold;
  font-weight: 400;
  margin-bottom: 0;
  font-size: 18;
  line-height: 18px;
}

.IS4 {
  font-family: TimesModern-Regular;
  font-size: 14;
  line-height: 24;
  color: #696969;
  padding-bottom: 10px;
}

.IS5 {
  padding-left: 10px;
  flex: 1;
}

.IS6 {
  flex-direction: row;
}
</style>

<Link
  linkStyle={
    Object {
      "backgroundColor": "#272D34",
      "flex": 1,
      "marginLeft": "5px",
      "padding": "10px",
    }
  }
  url="/article/123"
>
  <div
    className="tc-view__TcView-nuazoi-0 fPjBcr IS6"
  >
    <Image
      aspectRatio={1}
      className="IS1"
      fill={true}
      uri="//www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5af6925e-2599-11e9-b782-40e94f317da5.jpg?crop=1000%2C1000%2C250%2C0"
    />
    <div
      className="tc-view__TcView-nuazoi-0 fPjBcr IS5"
    >
      <div
        className="tc-view__TcView-nuazoi-0 fPjBcr IS2"
      >
        <ArticleLabel
          color="#CCC"
          isVideo={false}
          title="label"
        />
      </div>
      <div
        aria-level="3"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS3"
        role="heading"
      >
        This is tile headline
      </div>
      <div
        aria-level="4"
        className="tc-text__TcText-sc-15igzev-0 lhcAkf IS4"
        role="heading"
      >
        Three Conservative MPs resign
      </div>
      <ArticleFlags
        color="#CCC"
        flags={
          Array [
            Object {
              "expiryTime": "2030-03-14T12:00:00.000Z",
              "type": "EXCLUSIVE",
            },
          ]
        }
        longRead={true}
      />
    </div>
  </div>
</Link>
`;
